WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
22979
crash seen in -[WebView drawsBackground] when quitting
https://bugs.webkit.org/show_bug.cgi?id=22979
Summary
crash seen in -[WebView drawsBackground] when quitting
Darin Adler
Reported
2008-12-23 09:00:49 PST
Exception: EXC_BAD_ACCESS (0x0001) Codes: KERN_PROTECTION_FAILURE (0x0002) at 0x000000e7 Thread 0 Crashed: 0 com.apple.WebKit 0x94d5a46f -[WebView drawsBackground] + 9 1 com.apple.WebKit 0x94dad2d1 -[WebFrameView viewDidMoveToWindow] + 77 2 com.apple.AppKit 0x93289b5d -[NSView _setWindow:] + 916 3 com.apple.AppKit 0x9328e62d -[NSView removeFromSuperview] + 358 4 com.apple.AppKit 0x93316d25 -[NSView removeFromSuperviewWithoutNeedingDisplay] + 38 5 com.apple.CoreFoundation 0x9083ead0 CFArrayApplyFunction + 307 6 com.apple.AppKit 0x93294081 -[NSView _finalize] + 386 7 com.apple.AppKit 0x93293ed4 -[NSView dealloc] + 41 8 com.apple.WebKit 0x94d74ab6 -[WebView dealloc] + 144
Attachments
patch
(2.12 KB, patch)
2008-12-23 09:02 PST
,
Darin Adler
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2008-12-23 09:02:57 PST
Created
attachment 26228
[details]
patch
Darin Adler
Comment 2
2008-12-23 09:25:39 PST
Turned out the comment I added in WebHTMLView was wrong.
Darin Adler
Comment 3
2008-12-23 09:26:00 PST
http://trac.webkit.org/changeset/39452
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug