2008-12-23  Darin Adler  <darin@apple.com>

Reviewed by Dan Bernstein.

        - fix https://bugs.webkit.org/show_bug.cgi?id=22979
          crash seen in -[WebView drawsBackground] when quitting
          <rdar://problem/6464601>

        * WebView/WebView.mm:
        (-[WebView drawsBackground]): Added comment and a null check for _private.



Canonical link: https://commits.webkit.org/31655@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@39452 268f45cc-cd09-0410-ab3c-d52691b4dbfc